--- a/nestedscrolllayout/src/main/AndroidManifest.xml
+++ b/nestedscrolllayout/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.ytjojo.viewlib.nestedsrolllayout">
+          package="com.ytjojo.viewlib.nestedscrolllayout">
 
     <application
         android:allowBackup="true"
