--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,10 @@
             android:name="com.ytjojo.viewlib.nestedscrolllayout.demo.RecyclerViewActvity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <activity
+            android:name="com.ytjojo.viewlib.nestedscrolllayout.demo.ViewPagerRefreshActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
