--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,18 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+GROUP=com.ytjojo.viewlib.supernestedlayout
+VERSION_NAME=0.9.0-SNAPSHOT
+
+POM_URL=https://github.com/ytjojo/SuperNeestedscrollLayout/
+POM_SCM_URL=https://github.com/ytjojo/SuperNeestedscrollLayout/
+POM_SCM_CONNECTION=scm:git:git://github.com/ytjojo/SuperNeestedscrollLayout.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/ytjojo/SuperNeestedscrollLayout.git
+
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+
+POM_DEVELOPER_ID=ytjojo@163.com
+POM_DEVELOPER_NAME=ytjojo
+POM_DEVELOPER_EMAIL=ytjojo@163.com
