--- a/nestedscrolllayout/build.gradle
+++ b/nestedscrolllayout/build.gradle
@@ -26,3 +26,4 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.orhanobut:logger:1.15'
 }
+apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
