--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,8 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 GROUP=com.github.ytjojo.supernestedlayout
-VERSION_NAME=0.9.0-SNAPSHOT
+#VERSION_NAME=0.9.2-SNAPSHOT
+VERSION_NAME=0.9.3
 
 POM_URL=https://github.com/ytjojo/SuperNeestedscrollLayout/
 POM_SCM_URL=https://github.com/ytjojo/SuperNeestedscrollLayout/
@@ -29,5 +30,12 @@ POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
 
 POM_DEVELOPER_ID=ytjojo@163.com
-POM_DEVELOPER_NAME=ytjojo
+POM_DEVELOPER_NAME=ytjojo@163.com
 POM_DEVELOPER_EMAIL=ytjojo@163.com
+
+SONATYPE_NEXUS_USERNAME=ytjojo@163.com
+SONATYPE_NEXUS_PASSWORD=tjtw30722786zx
+
+signing.keyId=2563A341
+signing.password=tjtw30722786zx
+signing.secretKeyRingFile=C:/Users/Administrator/.gnupg/secring.gpg
