处理没有滚动效果会出现的bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,14 @@
             android:name="com.github.ytjojo.supernestedlayout.demo.BottomSheetDialogActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <activity
+            android:name="com.github.ytjojo.supernestedlayout.demo.nobehavior.SimpleActivty"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name="com.github.ytjojo.supernestedlayout.demo.nobehavior.SimpleRefreshHeaderActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
